--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <html>
-
-<head>
+  <head>
     <title>Pacmen</title>
     <!-- DO NOT CHANGE THIS LINE OF CODE -->
     <script src="./pacmen.js"></script>
-</head>
+  </head>
 
-<body>
-    <div id='game'>
-        <button onclick='makeOne()' width='200' height='30'>Add PacMan</button>
-        <button onclick='update()' width='200' height='30'>Start Game</button>
+  <body>
+    <div id="game">
+      <button onclick="makeOne()" width="200" height="30">Add PacMan</button>
+      <button onclick="update();mouthMove()" width="200" height="30">
+        Start Game
+      </button>
     </div>
-</body>
-
+  </body>
 </html>
